configuration/registry/resource/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: registry
  name: registry
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registry
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: registry
    spec:
      containers:
      - image: registry:2
        name: registry
        volumeMounts:
        - name: repository-volume
          mountPath: "/var/lib/registry"
        - name: config-volume
          mountPath: /etc/docker/registry/
        resources: {}
      volumes:
      - name: config-volume
        secret:
          secretName: registry-config
          optional: false
      - name: repository-volume
        persistentVolumeClaim:
          claimName: registry

status: {}
