configuration/registry/resource/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  creationTimestamp: null
  name: registry
spec:
  rules:
  - host: registry.test
    http:
      paths:
      - backend:
          service:
            name: registry
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
